AC_INIT([DBus VO Service],[0.0.1],[drs@nrao.edu],[dVO],[http://casa.nrao.edu/])
AC_PREREQ([2.59])
AC_CONFIG_MACRO_DIRS([m4])

AX_EXPAND_PATH($srcdir,root)
AC_MSG_NOTICE([package root is $PKG_ROOT])
MODIFIEDPATH=$root/bin$PATH_SEPARATOR$PATH
AC_MSG_NOTICE([path is $MODIFIEDPATH])

AC_LANG(C++)
AC_PROG_CXX([clang++ c++ g++])
AX_CXX_COMPILE_STDCXX_11
AX_LIB_STDCXX

AX_PATH_PROG([DBUS_XML2CPP],[dbuspp-xml2cpp],[$MODIFIEDPATH])
AX_PROG_GNUTAR([TAR],[$MODIFIEDPATH])
dnl AC_PROG_MKDIR_P
AX_PROG_MKDIR_P([MKDIR])

AX_LIB_DBUS

AC_SUBST(DBUS_XML2CPP)
AC_SUBST(TAR)
AC_SUBST(MKDIR)
AC_CONFIG_HEADERS([include/dvo/config.h])
AC_CONFIG_FILES([mk/rules.mk])
AC_OUTPUT
